--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -1,8 +1,8 @@
 # model setting
-enc_layers: 6
-dec_layers: 6
+enc_layers: 4
+dec_layers: 4
 dim_feedforward: 1024
-num_queries: 300 # 40
+num_queries: 40 # 40
 
 # data setting
 dataset_name: thumos14
@@ -12,6 +12,8 @@ online_slice: true
 slice_len: 128
 slice_overlap: 0.75
 test_slice_overlap: 0.25
+
+act_reg: True
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
