--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -13,6 +13,14 @@ slice_len: 128
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 
+epochs: 300 # 16
+lr_step: [260, 290] # [14]
+
+postproc_rank: 1 # 1
+postproc_cls_topk: 1 # 1
+postproc_ins_topk: 200 # 100
+nms_thr: 0.4 # 0.4
+
 act_reg: False
 
 # output
