--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -23,5 +23,11 @@ nms_thr: 0.4 # 0.4
 
 act_reg: False
 
+use_KK: True
+use_QQ: True
+
+KK_loss_coef: 5.0
+QQ_loss_coef: 5.0
+
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
