--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -22,13 +22,13 @@ postproc_ins_topk: 200 # 100
 nms_thr: 0.4 # 0.4
 
 act_reg: False
-aux_loss: False
+aux_loss: True
 
 use_KK: True
 use_QQ: True
 
-KK_loss_coef: 5.0
-QQ_loss_coef: 5.0
+KK_loss_coef: 10.0
+QQ_loss_coef: 10.0
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
