--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -1,5 +1,5 @@
 # model setting
-enc_layers: 2
+enc_layers: 12
 dec_layers: 4
 dim_feedforward: 1024
 num_queries: 40 # 40
@@ -24,8 +24,8 @@ nms_thr: 0.4 # 0.4
 act_reg: False
 aux_loss: True
 
-use_KK: True
-use_QQ: True
+use_KK: False
+use_QQ: False
 
 KK_loss_coef: 5.0
 QQ_loss_coef: 5.0
