--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -26,8 +26,8 @@ nheads: 8
 act_reg: False
 aux_loss: True
 
-use_KK: True
-use_QQ: True
+use_KK: False
+use_QQ: False
 
 KK_loss_coef: 5.0
 QQ_loss_coef: 5.0
