--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -1,5 +1,5 @@
 # model setting
-enc_layers: 4
+enc_layers: 2
 dec_layers: 4
 dim_feedforward: 1024
 num_queries: 40 # 40
@@ -13,8 +13,8 @@ slice_len: 128
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 
-epochs: 120 # 16
-lr_step: [80, 100] # [14]
+epochs: 16 # 16
+lr_step: [14] # [14]
 
 postproc_rank: 1 # 1
 postproc_cls_topk: 1 # 1
@@ -24,8 +24,8 @@ nms_thr: 0.4 # 0.4
 act_reg: False
 aux_loss: True
 
-use_KK: True
-use_QQ: True
+use_KK: False
+use_QQ: False
 
 KK_loss_coef: 5.0
 QQ_loss_coef: 5.0
