--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -18,14 +18,14 @@ lr_step: [80, 100] # [14]
 
 postproc_rank: 1 # 1
 postproc_cls_topk: 1 # 1
-postproc_ins_topk: 200 # 200
+postproc_ins_topk: 100 # 200
 nms_thr: 0.4 # 0.4
 
 act_reg: False
 aux_loss: True
 
-use_KK: True
-use_QQ: True
+use_KK: False
+use_QQ: False
 
 use_dn: True
 
