--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -14,7 +14,7 @@ slice_overlap: 0.75
 test_slice_overlap: 0.25
 
 epochs: 60 # 16
-lr_step: [20, 40] # [14]
+lr_step: [40, 50] # [80, 100]
 
 postproc_rank: 1 # 1
 postproc_cls_topk: 1 # 1
