--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -24,10 +24,10 @@ nms_thr: 0.4 # 0.4
 act_reg: False
 aux_loss: True
 
-use_KK: True
-use_QQ: True
+use_KK: False
+use_QQ: False
 
-use_dn: True
+use_dn: False
 
 KK_loss_coef: 5.0
 QQ_loss_coef: 5.0
