--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -13,9 +13,9 @@ slice_len: 128
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 
-epochs: 16 # 16
-#lr_step: [80, 100] # [80, 100], [14]
-lr_step : [14]
+epochs: 120 # 16
+lr_step: [80, 100] # [80, 100], [14]
+#lr_step : [14]
 
 postproc_rank: 1 # 1
 postproc_cls_topk: 1 # 1
