--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -2,7 +2,9 @@
 enc_layers: 2
 dec_layers: 4
 dim_feedforward: 1024
-num_queries: 40 # 40
+#num_queries: 40 # 40
+num_queries_one2one: 40, # 40
+num_queries_one2many: 200, # 200
 
 # data setting
 dataset_name: thumos14
@@ -30,8 +32,9 @@ use_QQ: True
 
 use_dn: False
 
-KK_loss_coef: 5.0
-QQ_loss_coef: 5.0
+QK_loss_coef: 2.0
+KK_loss_coef: 2.0
+QQ_loss_coef: 2.0
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
