--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -3,18 +3,19 @@ enc_layers: 2
 dec_layers: 4
 dim_feedforward: 1024
 #num_queries: 40 # 40
-num_queries_one2one: 300 # 40
-num_queries_one2many: 1500 # 200
+num_queries_one2one: 100 # 40
+num_queries_one2many: 500 # 200
 
 # data setting
 dataset_name: thumos14
 feature: i3d2s
 feature_dim: 2048
 online_slice: True
-slice_len: 128
+slice_len: 256
 slice_overlap: 0.75
 test_slice_overlap: 0.25
 
+batch_size: 16 # 16
 epochs: 120 # 120, 16
 lr_step: [80, 100] # [80, 100], [14]
 #lr_step : [14]
