--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -12,8 +12,8 @@ feature: i3d2s
 feature_dim: 2048
 online_slice: True
 slice_len: 128 # 128
-slice_overlap: 0.75
-test_slice_overlap: 0.25
+slice_overlap: 0.75 # 0.75
+test_slice_overlap: 0.25 # 0.50
 
 batch_size: 16 # 16
 epochs: 120 # 120, 16
