--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -39,10 +39,10 @@ QK_loss_coef: 2.0
 KK_loss_coef: 2.0
 QQ_loss_coef: 2.0
 
-k_one2many: 6, # 6
-lambda_one2many: 1.0, # 1.0
-random_refpoints_xy: False,
-two_stage: True,
+k_one2many: 6 # 6
+lambda_one2many: 1.0 # 1.0
+random_refpoints_xy: False
+two_stage: True
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
