--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -3,9 +3,9 @@ enc_layers: 2
 dec_layers: 4
 dim_feedforward: 1024
 #num_queries: 40 # 40
-num_queries_enc: -1
+num_queries_enc: 40 # -1
 num_queries_one2one: 40 # 40
-num_queries_one2many: 167 # 200
+num_queries_one2many: 167 # 167
 
 # data setting
 dataset_name: thumos14
