--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -29,9 +29,9 @@ nms_thr: 0.4 # 0.4
 act_reg: False
 aux_loss: True
 
-use_QK: False
-use_KK: False
-use_QQ: False
+use_QK: True
+use_KK: True
+use_QQ: True
 
 use_dn: False
 
