--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -29,13 +29,13 @@ nms_thr: 0.4 # 0.4
 act_reg: False
 aux_loss: True
 
-use_QK: True
+# use_QK: True
 use_KK: True
 use_QQ: True
 
 use_dn: False
 
-QK_loss_coef: 2.0
+# QK_loss_coef: 2.0
 KK_loss_coef: 2.0
 QQ_loss_coef: 2.0
 
