--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -37,17 +37,17 @@ use_QQ: True
 
 use_dn: False
 
-cls_loss_coef: 2
-seg_loss_coef: 5
-iou_loss_coef: 2
+cls_loss_coef: 2 # 6
+seg_loss_coef: 5 # 5
+iou_loss_coef: 2 # 2
 
-set_cost_class: 2  # Class coefficient
-set_cost_seg: 5  # Segment L1 coefficient
-set_cost_iou: 2  # Segment IoU coefficient
+set_cost_class: 6 # 6, Class coefficient
+set_cost_seg: 5  # 5, Segment L1 coefficient
+set_cost_iou: 2  # 2, Segment IoU coefficient
 
-QK_loss_coef: 2.0
-KK_loss_coef: 2.0
-QQ_loss_coef: 2.0
+QK_loss_coef: 2.0 # 2
+KK_loss_coef: 2.0 # 2
+QQ_loss_coef: 2.0 # 2
 
 k_one2many: 6 # 6
 lambda_one2many: 1.0 # 1.0
