--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -26,7 +26,7 @@ postproc_cls_topk: 1 # 1
 postproc_ins_topk: 200 # 200
 nms_thr: 0.4 # 0.4
 
-nms_mode: nms # nms
+nms_mode: raw # nms
 
 act_reg: False
 aux_loss: True
@@ -52,7 +52,7 @@ QQ_loss_coef: 2.0
 k_one2many: 6 # 6
 lambda_one2many: 1.0 # 1.0
 random_refpoints_xy: False
-two_stage: False
+two_stage: True
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
