--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -17,8 +17,8 @@ slice_overlap: 0.75 # 0.75
 test_slice_overlap: 0.25 # 0.25
 
 batch_size: 16 # 16
-epochs: 300 # 120, 16
-lr_step: [250, 290] # [80, 100], [14]
+epochs: 80 # 120, 16
+lr_step: [47, 60] # [80, 100], [14]
 #lr_step : [14]
 
 postproc_rank: 1 # 1
@@ -26,7 +26,7 @@ postproc_cls_topk: 1 # 1
 postproc_ins_topk: 200 # 200
 nms_thr: 0.4 # 0.4
 
-nms_mode: nms # nms
+nms_mode: raw # raw
 
 act_reg: False
 aux_loss: True
