--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -26,7 +26,7 @@ postproc_cls_topk: 1 # 1
 postproc_ins_topk: 200 # 200
 nms_thr: 0.4 # 0.4
 
-nms_mode: nms # raw
+nms_mode: raw # raw
 
 act_reg: False
 aux_loss: True
