--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -19,8 +19,8 @@ slice_overlap: 0.75 # 0.75
 test_slice_overlap: 0.25 # 0.25
 
 batch_size: 16 # 16
-epochs: 120 # 120, 16
-lr_step: [80, 100] # [80, 100], [14]
+epochs: 16 # 120, 16
+lr_step: [14] # [80, 100], [14]
 #lr_step : [14]
 
 postproc_rank: 1 # 1
