--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -20,7 +20,7 @@ test_slice_overlap: 0.25 # 0.25
 
 batch_size: 16 # 16
 epochs: 20 # 120, 16
-lr_step: [16, 18] # [80, 100], [14]
+lr_step: [18] # [80, 100], [14]
 #lr_step : [14]
 
 postproc_rank: 1 # 1
