--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -14,13 +14,13 @@ dataset_name: thumos14
 feature: i3d2s
 feature_dim: 2048
 online_slice: True
-slice_len: 256 # 192
+slice_len: 192 # 192
 slice_overlap: 0.75 # 0.75
 test_slice_overlap: 0.25 # 0.25
 
 batch_size: 16 # 16
-epochs: 50 # 120, 16
-lr_step: [40, 45] # [80, 100], [14]
+epochs: 20 # 120, 16
+lr_step: [17] # [80, 100], [14]
 #lr_step : [14]
 
 postproc_rank: 1 # 1
