--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -47,13 +47,13 @@ set_cost_class: 2  # Class coefficient
 set_cost_seg: 5  # Segment L1 coefficient
 set_cost_iou: 2  # Segment IoU coefficient
 
-QK_loss_coef: 5.0
-KK_loss_coef: 5.0
-QQ_loss_coef: 5.0
+QK_loss_coef: 2.0
+KK_loss_coef: 2.0
+QQ_loss_coef: 2.0
 
 k_one2many: 6 # 6
 lambda_one2many: 1.0 # 1.0
-random_refpoints_xy: True
+random_refpoints_xy: False
 two_stage: True
 
 # output
