--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -19,9 +19,8 @@ slice_overlap: 0.75 # 0.75
 test_slice_overlap: 0.75 # 0.75
 
 batch_size: 16 # 16
-epochs: 30 # 120, 16
-lr_step: [17] # [80, 100], [14]
-#lr_step : [14]
+epochs: 30 # 20
+lr_step: [17] # [17]
 
 postproc_rank: 1 # 1
 postproc_cls_topk: 1 # 1
