--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -34,8 +34,8 @@ nms_mode: nms # raw
 act_reg: False
 aux_loss: True
 
-use_QK: True
-use_KK: False
+use_QK: False
+use_KK: True
 use_QQ: True
 
 use_dn: False
