--- a/datasets/path.yml
+++ b/datasets/path.yml
@@ -6,8 +6,8 @@ thumos14:
 #  ann_file: '/mnt/hdd1/THUMOS14/i3d_NF16_S8_FPS25/th14_i3d_annotations_with_fps_duration.json'
 #  ann_file: 'data/thumos14/slowfast_NF16_S16_FPS25/th14_slowfast_annotations_with_fps_duration.json'
   i3d2s:
-#    local_path: data/thumos14/I3D_2stream_Pth
-    local_path: '/mnt/hdd2/THUMOS14/thumos/i3d_features'
+    local_path: data/thumos14/I3D_2stream_Pth
+#    local_path: '/mnt/hdd2/THUMOS14/thumos/i3d_features'
     ft_info_file: 'data/thumos14/th14_i3d2s_ft_info.json'
 #    ft_info_file: '/mnt/hdd1/THUMOS14/i3d_NF16_S8_FPS25/th14_i3d_ft_info.json'
   slowfast:
