--- a/configs/thumos14_i3d2s_tadtr.yml
+++ b/configs/thumos14_i3d2s_tadtr.yml
@@ -7,7 +7,7 @@ dim_feedforward: 1024
 # num_queries: 40 # 40
 num_queries_enc: -1 # -1
 num_queries_one2one: 40 # 40
-num_queries_one2many: 200 # 200
+num_queries_one2many: -1 # 200
 
 # data setting
 dataset_name: thumos14
@@ -15,8 +15,8 @@ feature: i3d2s
 feature_dim: 2048
 online_slice: True
 slice_len: 192 # 192
-slice_overlap: 0.875 # 0.875
-test_slice_overlap: 0.875 # 0.875
+slice_overlap: 0.75 # 0.875
+test_slice_overlap: 0.25 # 0.875
 
 batch_size: 16 # 16
 epochs: 30 # 20
@@ -34,7 +34,7 @@ nms_mode: nms # raw
 act_reg: False
 aux_loss: True
 
-use_QK: True
+use_QK: False
 use_KK: False
 use_QQ: False
 
@@ -54,8 +54,8 @@ QQ_loss_coef: 5.0
 
 k_one2many: 6 # 6
 lambda_one2many: 1.0 # 1.0
-random_refpoints_xy: False # False
-two_stage: True
+random_refpoints_xy: True # False
+two_stage: False
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
