--- a/datasets/path.yml
+++ b/datasets/path.yml
@@ -11,5 +11,6 @@ thumos14:
     ft_info_file: 'data/thumos14/th14_i3d2s_ft_info.json'
 #    ft_info_file: '/mnt/hdd1/THUMOS14/i3d_NF16_S8_FPS25/th14_i3d_ft_info.json'
   slowfast:
-    local_path: data/thumos14/slowfast_NF16_S16_FPS25/features
-    ft_info_file: 'data/thumos14/slowfast_NF16_S16_FPS25/th14_slowfast_ft_info.json'
+    local_path: '/mnt/hdd2/THUMOS14/thumos/slowfast_features'
+#    ft_info_file: 'data/thumos14/slowfast_NF16_S16_FPS25/th14_slowfast_ft_info.json'
+    ft_info_file: 'data/thumos14/th14_i3d2s_ft_info.json'
