--- a/configs/fineaction.yml
+++ b/configs/fineaction.yml
@@ -7,7 +7,7 @@ dim_feedforward: 1024
 # num_queries: 40 # 40
 num_queries_enc: -1 # -1
 num_queries_one2one: 40 # 40
-num_queries_one2many: 200 # 200
+num_queries_one2many: -1 # 200
 
 # data setting
 dataset_name: thumos14
@@ -15,8 +15,8 @@ feature: videoMAE # i3d2s
 feature_dim: 1408
 online_slice: True
 slice_len: 192 # 192
-slice_overlap: 0.875 # 0.875
-test_slice_overlap: 0.875 # 0.875
+slice_overlap: 0.75 # 0.875
+test_slice_overlap: 0.25 # 0.875
 
 batch_size: 16 # 16
 epochs: 30 # 20
@@ -55,7 +55,7 @@ QQ_loss_coef: 5.0
 k_one2many: 6 # 6
 lambda_one2many: 1.0 # 1.0
 random_refpoints_xy: False # False
-two_stage: True
+two_stage: False
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
