--- a/configs/fineaction.yml
+++ b/configs/fineaction.yml
@@ -7,16 +7,16 @@ dim_feedforward: 1024
 # num_queries: 40 # 40
 num_queries_enc: -1 # -1
 num_queries_one2one: 40 # 40
-num_queries_one2many: -1 # 200
+num_queries_one2many: 200 # 200
 
 # data setting
 dataset_name: thumos14
 feature: videoMAE # i3d2s
 feature_dim: 1408
 online_slice: True
-slice_len: 128 # 192
-slice_overlap: 0.75 # 0.75
-test_slice_overlap: 0.25 # 0.25
+slice_len: 192 # 192
+slice_overlap: 0.875 # 0.75
+test_slice_overlap: 0.50 # 0.25
 
 batch_size: 16 # 16
 epochs: 30 # 20
@@ -34,7 +34,7 @@ nms_mode: nms # raw
 act_reg: False
 aux_loss: True
 
-use_QK: False
+use_QK: True
 use_KK: True
 use_QQ: True
 
@@ -49,13 +49,13 @@ set_cost_seg: 5  # Segment L1 coefficient
 set_cost_iou: 2  # Segment IoU coefficient
 
 QK_loss_coef: 2.0
-KK_loss_coef: 5.0
-QQ_loss_coef: 5.0
+KK_loss_coef: 2.0
+QQ_loss_coef: 2.0
 
 k_one2many: 6 # 6
 lambda_one2many: 1.0 # 1.0
 random_refpoints_xy: False # False
-two_stage: False
+two_stage: True
 
 # output
 output_dir: outputs/thumos14_i3d2s_tadtr
